lbdb (0.28.1) unstable; urgency=low

  * Make m_osx_addressbook compile on MacOS 10.3 and XCode, too.  Thanks
    to Yuval Kogman <nothingmuch@woobling.org> and Brendan Cully
    <brendan@kublai.com> for the patch.
  * Remove "set -e" from lbdbq, which causes trouble if grep doesn't find
    a match in some of the modules (Closes: #222647).

 --

lbdb (0.28) unstable; urgency=low

  * Fix bug in ABQuery module, which crashes when it finds results in
    non-latin character sets.  Now returns UTF8 results instead.  Thanks
    to Brendan Cully <brendan@kublai.com>.
  * Correct delimiter of vcard to END:VCARD in m_gnomecard and allow
    encodings etc. in the FN field, thanks to Rogerio Brito
    <rbrito@ime.usp.br> (Closes: #198633).
  * Search for .gnome/GnomeCard.gcd in $HOME instead of current directory.
  * m_abook: Search for $HOME/.abook/addressbook in addition to
    $HOME/.abook.addressbook to honor the fact that this file was moved in
    abook 0.5 (Closes: #205418).
  * Add a new version of mutt_ldap_query.pl by Marc de Courville:
    - activated pod2usage (now contained in all the decent distributions)
    - cleaned pod section to comply better with the pod formatting standard
    - change contact address
    - fixed typos
  * m_palm: Use only "email" entries as e-mail addresses and not
    everything including "@".  Thanks to Nikolaus Rath <Nikolaus@rath.org>
    for providing the patch (Closes: #196888).
  * Upgrade to Standards-Version 3.6.1 (no changes).

 -- Roland Rosenfeld <roland@debian.org>  Tue,  9 Sep 2003 19:49:20 +0200

lbdb (0.27) unstable; urgency=low

  * New module m_osx_addressbook, which queries the OS X AddressBook (only
    on OS X with the Developer tools installed) written by Brendan Cully
    <brendan@kublai.com>.
  * Fix description of m_nispasswd in debian/control (Closes: #185573).
  * Upgrade to Standards-Version 3.5.9 (no changes).
  * Add ${misc:Depends} to dependencies.
