@@ -2,7 +2,7 @@
 #
 # -*-sh-*-
 #
-#     Copyright (C) 1999  Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 1999-2004  Roland Rosenfeld <roland@spinnaker.de>
 # 
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
@@ -24,6 +24,15 @@
 m_passwd_query()
 {
     HOST="`lbdb_hostname`"
+    case "$PASSWD_IGNORESYS" in
+	true|yes|1)
+	    IGNOREGREP = "grep 'UID	\([12]....\|....\)$'"
+	    ;;
+        *)
+	    IGNOREGREP = "cat"
+	    ;;
+    esac
+
     sed -e "s/^\([^:]*\):[^:]*:\([^:]*\):[^:]*:\([^:,]*\)[,:].*\$/\1@$HOST	\3	UID \2/" /etc/passwd \
-    | grep -i "$@"
+    | grep -i "$@" | $IGNOREGREP
 }
